# ecu_xdf_assistant

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  ghidra_setup.md
examples/: run_full_pipeline.sh  settings.example.json
scripts/: install.sh
src/ecu_xdf_assistant/: cli.py  config.py  inference.py  jsonio.py  models.py  pipeline.py
src/ecu_xdf_assistant/ghidra/: __init__.py  runner.py
src/ecu_xdf_assistant/ghidra/scripts/: ExportFirmwareEvidence.jy  ExportFirmwareEvidence.py
src/ecu_xdf_assistant/llm/: __init__.py  adjudicator.py  lmstudio_client.py  prompts.py  schema.py
src/ecu_xdf_assistant/scanner/: __init__.py  binary_view.py  detectors.py  metrics.py
src/ecu_xdf_assistant/validation/: __init__.py  confidence.py  validator.py
src/ecu_xdf_assistant/xdf/: __init__.py  writer.py
tests/: test_inference.py  test_scanner.py  test_validation.py  test_xdf_writer.py
