[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecu-xdf-assistant"
version = "0.1.0"
description = "Local pipeline to extract ECU tuning candidates and generate XDF hints from binary firmware."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI" }
]
dependencies = []

[project.scripts]
ecu-xdf-assistant = "ecu_xdf_assistant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
